client panel app

--- a/package.json
+++ b/package.json
@@ -19,7 +19,15 @@
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
-    "rxjs": "~6.4.0",
+    "angular2-flash-messages": "^3.0.1",
+    "angularfire2": "^5.2.1",
+    "bootstrap": "^4.0.0-beta.2",
+    "firebase": "^6.6.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
