--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "angular2-flash-messages": "^3.0.1",
     "angularfire2": "^5.2.1",
     "bootstrap": "^4.0.0-beta.2",
+    "core-js": "^3.21.1",
     "firebase": "^6.6.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
