--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase": "^6.6.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "node-gyp": "^9.0.0",
     "popper.js": "^1.15.0",
     "rxjs": "^6.4.0",
     "rxjs-compat": "^6.5.3",
